--- a/src/app/core/styles/theme.config.scss
+++ b/src/app/core/styles/theme.config.scss
@@ -18,7 +18,7 @@ $color-prestige: #a083d9;
 $color-fame: #e94f37;
 $color-materials: #879d8e;
 // === COULEURS DE STATUT ===
-$color-success: #3a5733;
+$color-success: #267e11;
 $color-warning: #fbc02d;
 $color-danger: #f44336;
 $color-disabled: #999999;
@@ -28,11 +28,10 @@ $color-people: #aab70e;
 $color-pratician: #ffba3e;
 $color-army: #ff401d;
 // === TYPOGRAPHIE ===
-$font-base: 'Inter',
-'Segoe UI',
+$font-base: "Cabin",
 sans-serif;
-$font-heading : "Germania One",
-system-ui;
+$font-heading: "Boogaloo",
+sans-serif;
 // === Z-INDEX SYSTEME ===
 $z-base: 1;
 $z-overlay: 10;
