--- a/src/app/components/system-panel/panel-frame/panel-frame.component.scss
+++ b/src/app/components/system-panel/panel-frame/panel-frame.component.scss
@@ -1,155 +1,101 @@
+@use '../../../core/styles/hud-style.config.scss' as *;
 @use '../../../core/styles/theme.config.scss' as *;
-$border-size: 72px;
+@use '../../../core/styles/mixins.scss' as *;
+:host {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    backdrop-filter: blur(15px);
+}
+
 .panel-frame {
-    position: absolute;
-    padding: $border-size - 16;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     pointer-events: auto;
     user-select: none;
-    .panel-content {
-        position: relative;
-        background-image: url('/assets/ui/frame/row-2-column-2.png');
-        height: 100%;
-        width: 100%;
-        overflow: auto;
-        z-index: 1;
-        padding: 24px;
-    }
-    .panel-header {
-        // Structure et position
+    max-height: 80vh;
+    max-width: 1000px;
+    z-index: 1;
+    box-shadow: inset 0 0 64px 64px #2e281b;
+    backdrop-filter: blur(10px);
+    filter: drop-shadow(0 1px 3px rgba(0, 0, 0, 0.24)) drop-shadow(0 2px 5px rgba(0, 0, 0, 0.24)) drop-shadow(0 3px 8px rgba(0, 0, 0, 0.24)) drop-shadow(0 5px 13px rgba(0, 0, 0, 0.24)) drop-shadow(0 8px 21px rgba(0, 0, 0, 0.24));
+    &:after {
+        content: '';
         position: absolute;
-        top: 12px;
+        top: 0;
+        bottom: 0;
         left: 0;
         right: 0;
-        height: 64px;
-        z-index: 12;
-        // Comportement
+        z-index: -1;
+        background-position: center center;
+        background-size: 200%;
+        background-image: url('/assets/ui/frame/gladiator-panel.png');
+        opacity: .2;
+    }
+    &::before {
+        content: '';
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        z-index: 0;
+        border-radius: 4px;
+        @include hudInnerFrame(#574924a8,
+        #d47d30);
+    }
+    .panel-content {
+        padding: 24px 24px 24px;
+    }
+    .description {
+        padding: 48px 48px 0;
+        text-align: center;
+        font-size: 18px;
+        font-weight: 700;
+        color: #ffe09d;
+        @include globalShadow();
+        pointer-events: none;
+    }
+    .header-title {
         display: flex;
         align-items: center;
         justify-content: center;
-        .header-title {
-            &::before {
-                position: absolute;
-                content: '';
-                background-image: url('/assets/ui/frame/header-left.png');
-                background-size: contain;
-                background-position: 0 -2px;
-                top: 0;
-                left: -47px;
-                height: 64px;
-                width: 48px;
-            }
-            &::after {
-                position: absolute;
-                content: '';
-                background-image: url('/assets/ui/frame/header-right.png');
-                background-size: contain;
-                background-position: 0 -2px;
-                top: 0;
-                right: -48px;
-                height: 65px;
-                width: 49px;
-            }
-            filter: saturate(0.9);
-            position: relative;
-            height: 64px;
-            // Comportement
-            padding: 0 1rem;
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-            // Style background
-            background-image: url('/assets/ui/frame/header-center.png');
-            background-size: contain;
-            background-position: 0 -2px;
-            // Style text
-            font-weight: bold;
-            font-size: 1.4rem;
-            color: #3a2e1a;
-            font-family: $font-heading;
-            text-transform: uppercase;
-        }
-        .close-button {
-            position: absolute;
-            right: 27px;
-            background: none;
-            border: none;
-            font-size: 1.5rem;
-            color: inherit;
-            cursor: pointer;
-            width: 40px;
-            height: 40px;
-            box-shadow: none;
-            &:hover {
-                backdrop-filter: brightness(1.2);
-            }
-        }
-    }
-    .corner,
-    .edge {
         position: absolute;
-        background-size: contain;
-        background-repeat: no-repeat;
-        pointer-events: none;
-        z-index: 2;
+        top: -40px;
+        width: 240px;
+        height: 78px;
+        text-transform: uppercase;
+        background-size: cover;
+        background-image: url('/assets/ui/frame/header.png');
+        .text {
+            color: white;
+            @include hudInnerText();
+            font-family: $font-heading;
+            font-size: 32px;
+            @include gradientText( #eeb948,
+            #ffecc3);
+        }
+        left: 50%;
+        transform: translateX(-50%);
     }
-    .corner.tl {
-        top: 13px;
-        left: 11px;
-        width: $border-size;
-        height: $border-size;
-        background-image: url('/assets/ui/frame/row-1-column-1.png');
-    }
-    .corner.tr {
-        top: 13px;
-        right: 11px;
-        width: $border-size;
-        height: $border-size;
-        background-image: url('/assets/ui/frame/row-1-column-3.png');
-    }
-    .corner.bl {
-        bottom: 13px;
-        left: 11px;
-        width: $border-size;
-        height: $border-size;
-        background-image: url('/assets/ui/frame/row-3-column-1.png');
-    }
-    .corner.br {
-        bottom: 13px;
-        right: 11px;
-        width: $border-size;
-        height: $border-size;
-        background-image: url('/assets/ui/frame/row-3-column-3.png');
-    }
-    .edge.top {
-        top: 13px;
-        left: $border-size;
-        right: $border-size;
-        height: $border-size;
-        background-image: url('/assets/ui/frame/row-1-column-2.png');
-        background-repeat: repeat-x;
-    }
-    .edge.bottom {
-        bottom: 13px;
-        left: $border-size;
-        right: $border-size;
-        height: $border-size;
-        background-image: url('/assets/ui/frame/row-3-column-2.png');
-        background-repeat: repeat-x;
-    }
-    .edge.left {
-        top: $border-size;
-        bottom: $border-size;
-        left: 12px;
-        width: $border-size - 4;
-        background-image: url('/assets/ui/frame/row-2-column-1.png');
-        background-repeat: repeat-y;
-    }
-    .edge.right {
-        top: $border-size;
-        bottom: $border-size;
-        right: 12px;
-        width: $border-size - 4;
-        background-image: url('/assets/ui/frame/row-2-column-3.png');
-        background-repeat: repeat-y;
+    .close-button {
+        position: absolute;
+        right: 0px;
+        background: none;
+        border: none;
+        font-size: 1.5rem;
+        color: inherit;
+        cursor: pointer;
+        width: 40px;
+        height: 40px;
+        box-shadow: none;
+        color: white;
+        &:hover {
+            backdrop-filter: brightness(1.2);
+        }
     }
 }
