--- a/src/app/features/hud/hud-cycle/hud-cycle.component.scss
+++ b/src/app/features/hud/hud-cycle/hud-cycle.component.scss
@@ -48,7 +48,7 @@
     overflow: hidden;
     position: relative;
     border-radius: 2px;
-    @include hudInnerFrame();
+    @include hudInnerFrame($hud-element-background, $hud-element-border);
 }
 
 .progress-mask-1,
