--- a/src/app/features/hud/hud-reputation/hud-reputation-item/hud-reputation-item.component.scss
+++ b/src/app/features/hud/hud-reputation/hud-reputation-item/hud-reputation-item.component.scss
@@ -25,7 +25,7 @@
     width: 68px;
     height: 68px;
     border-radius: 50%;
-    @include hudInnerFrame();
+    @include hudInnerFrame($hud-element-background, $hud-element-border);
     app-icon {
         display: block;
         position: relative;
