--- a/src/app/features/hud/hud-resources/hud-resources.component.scss
+++ b/src/app/features/hud/hud-resources/hud-resources.component.scss
@@ -12,7 +12,7 @@
 }
 
 .resource {
-    @include hudInnerFrame();
+    @include hudInnerFrame($hud-element-background, $hud-element-border);
     position: relative;
     border-radius: 4px;
     padding: 0 8px;
