--- a/src/app/core/styles/theme.config.scss
+++ b/src/app/core/styles/theme.config.scss
@@ -4,7 +4,7 @@ $color-bg: #fff2b0;
 $color-surface: #fffdf8;
 $color-text: #241d14;
 $color-text-muted: #66543d;
-$color-muted: #e2c796;
+$color-muted: #ebcd96;
 $color-border: #936c3b;
 $color-shadow:rgba(0, 0, 0, 0.533);
 $color-highlight:rgba(255, 255, 255, 0.533);
@@ -42,3 +42,9 @@ $z-debug: 100;
 $button-size: 48px;
 $button-border-size: 4px;
 $button-text-color: #ffe8b9;
+//rarity
+$mediocre: #686562;
+$common: #42ce3d;
+$rare: #299bff;
+$epic: #7b49ca;
+$legendary: #ecbb34;
