--- a/src/app/features/hud/hud-reputation/hud-reputation-item/hud-reputation-item.component.scss
+++ b/src/app/features/hud/hud-reputation/hud-reputation-item/hud-reputation-item.component.scss
@@ -33,7 +33,7 @@
         height: 90px;
         left: -11px;
         top: -9px;
-        filter: saturate(1.3) drop-shadow(0 1px 4px black) drop-shadow(0 2px 6px black);
+        filter: saturate(1.3);
     }
 }
 
